fixed minor bugs with default wishlist linebreak on tighter screens and alphabetical sorting of tutorial wishlists

--- a/css/wishlist.css
+++ b/css/wishlist.css
@@ -31,6 +31,10 @@
   position:relative;
 }
 
+.note{
+  max-width: 530px;
+}
+
 .wish:hover{
   position: relative;
   top: -1px;
